--- a/index.html
+++ b/index.html
@@ -1,28 +1,221 @@
+
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>식물 키우기</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>물주기 사이트</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background-color: #f0f8ff;
+    }
 
+    .container {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .card {
+      position: relative;
+      width: 300px;
+      height: 600px;
+      background-color: white;
+      border-radius: 20px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+      overflow: hidden;
+    }
+
+    .time-image, .plant-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .time-image { z-index: 0; }
+    .plant-overlay { z-index: 1; pointer-events: none; }
+
+    #물방울영역 {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 300px;
+      height: 600px;
+      z-index: 3;
+      pointer-events: none;
+    }
+
+    .drop {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 800px;
+      width: auto;
+      animation: fall 1.5s ease-out forwards;
+      z-index: 10;
+      pointer-events: none;
+      display: block;
+    }
+
+    @keyframes fall {
+      0% {
+        transform: translateX(-50%) translateY(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateX(-50%) translateY(360px);
+        opacity: 0;
+      }
+    }
+
+    .button-overlay {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 2;
+    }
+
+    #물뿌버튼 {
+      width: 180px;
+      cursor: pointer;
+      transition: transform 0.1s;
+    }
+
+    #물뿌버튼:active {
+      transform: scale(0.95);
+    }
+
+    .notice-image {
+      position: absolute;
+      top: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 4;
+      display: none;
+      width: 220px;
+    }
+  </style>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div class="container">
-  <div class="card">
-    <img id="timeImage" class="time-image" src="" alt="시간대 이미지" />
-    <img class="plant-overlay" src="https://i.ibb.co/dsn0Wf9M/image.png" alt="식물" />
-    <div id="물방울영역"></div>
-    <img id="물다줬" class="notice-image" src="https://i.ibb.co/WW8hZ4GH/image.png" alt="이미 물 줌" />
-    <img id="성공알림" class="notice-image" src="https://i.ibb.co/jxT5RQk/image.png" alt="물 주기 성공" />
-    <div class="button-overlay">
-      <img id="물뿌버튼" src="https://i.ibb.co/pjZWVgyb/image.png" alt="물뿌리기 버튼" />
+  <div class="container">
+    <div class="card">
+      <img id="timeImage" class="time-image" src="" alt="시간대 이미지" />
+      <img class="plant-overlay" src="https://i.ibb.co/dsn0Wf9M/image.png" alt="식물" />
+      <div id="물방울영역"></div>
+      <img id="물다줬" class="notice-image" src="https://i.ibb.co/WW8hZ4GH/image.png" alt="이미 물 줌" />
+      <img id="성공알림" class="notice-image" src="https://i.ibb.co/jxT5RQk/image.png" alt="물 주기 성공" />
+      <div class="button-overlay">
+        <img id="물뿌버튼" src="https://i.ibb.co/pjZWVgyb/image.png" alt="물뿌리기 버튼" />
+      </div>
+      <audio id="waterSound" src="https://files.catbox.moe/y7gz7b.mp3"></audio>
     </div>
-    <audio id="waterSound" src="https://files.catbox.moe/y7gz7b.mp3"></audio>
   </div>
-</div>
-<!-- partial -->
-  <script type="module" src="./script.js"></script>
 
+  <!-- Firebase 연동 -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+    import { getDatabase, ref, onValue, get, set } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBCuDyKgkDVwptjsQ_sepxq2WylrQWd8ok",
+      authDomain: "smkug-dd359.firebaseapp.com",
+      databaseURL: "https://smkug-dd359-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "smkug-dd359",
+      storageBucket: "smkug-dd359.appspot.com",
+      messagingSenderId: "16714972126",
+      appId: "1:16714972126:web:fc40119945f5e0844d7b4f",
+      measurementId: "G-CP8X2ZQ8XC"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const countRef = ref(db, "totalCount");
+
+    window.addEventListener("DOMContentLoaded", () => {
+      const button = document.getElementById("물뿌버튼");
+      const noticeAlready = document.getElementById("물다줬");
+      const noticeSuccess = document.getElementById("성공알림");
+      const waterSound = document.getElementById("waterSound");
+      const timeImage = document.getElementById("timeImage");
+      const dropArea = document.getElementById("물방울영역");
+
+      const counter = document.createElement("div");
+      counter.id = "totalCountDisplay";
+      counter.style.position = "absolute";
+      counter.style.top = "10px";
+      counter.style.left = "12px";
+      counter.style.fontSize = "30px";
+      counter.style.zIndex = "99";
+      counter.style.fontWeight = "bold";
+      counter.style.color = "#a3dcff";
+      document.querySelector(".card").appendChild(counter);
+
+      onValue(countRef, (snapshot) => {
+        const count = snapshot.val() ?? 0;
+        counter.textContent = count;
+      });
+
+      function getTodayString() {
+        const today = new Date();
+        return `${today.getFullYear()}-${today.getMonth() + 1}-${today.getDate()}`;
+      }
+
+      function updateTimeImage() {
+        const hour = new Date().getHours();
+        if (hour >= 6 && hour < 9) {
+          timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
+        } else if (hour >= 9 && hour < 17) {
+          timeImage.src = "https://i.ibb.co/W40tb97w/image.png";
+        } else if (hour >= 17 && hour < 20) {
+          timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
+        } else {
+          timeImage.src = "https://i.ibb.co/VpPc6gW0/image.png";
+        }
+      }
+
+      function createDrop() {
+        const drop = document.createElement("img");
+        drop.src = "https://i.postimg.cc/dQWRcKBW/01.png";
+        drop.className = "drop";
+        dropArea.appendChild(drop);
+        drop.addEventListener("animationend", () => drop.remove());
+      }
+
+      button.addEventListener("click", async () => {
+        const lastClick = localStorage.getItem("LastClickDate");
+        const today = getTodayString();
+
+        createDrop();
+        waterSound.play();
+
+        if (lastClick !== today) {
+          localStorage.setItem("LastClickDate", today);
+          noticeSuccess.style.display = "block";
+          setTimeout(() => {
+            noticeSuccess.style.display = "none";
+          }, 2000);
+
+          const snapshot = await get(countRef);
+          const current = snapshot.exists() ? snapshot.val() : 0;
+          set(countRef, current + 1);
+        } else {
+          noticeAlready.style.display = "block";
+          setTimeout(() => {
+            noticeAlready.style.display = "none";
+          }, 2000);
+        }
+      });
+
+      updateTimeImage();
+    });
+  </script>
 </body>
 </html>
