--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>물주기 사이트</title>
   <style>
     html, body {
@@ -13,7 +13,7 @@
     }
 
     .container {
-      height: 100%;
+      height: 100dvh;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -21,8 +21,10 @@
 
     .card {
       position: relative;
-      width: 300px;
-      height: 600px;
+      width: 90vw;
+      max-width: 300px;
+      height: 180vw;
+      max-height: 600px;
       background-color: white;
       border-radius: 20px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.2);
@@ -45,8 +47,8 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 300px;
-      height: 600px;
+      width: 100%;
+      height: 100%;
       z-index: 3;
       pointer-events: none;
     }
@@ -119,7 +121,6 @@
     </div>
   </div>
 
-  <!-- Firebase 연동 -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
     import { getDatabase, ref, onValue, get, set } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
