--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>물주기 사이트</title>
   <style>
     html, body {
@@ -13,7 +13,8 @@
     }
 
     .container {
-      height: 100dvh;
+      width: 100%;
+      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -21,10 +22,10 @@
 
     .card {
       position: relative;
-      width: 90vw;
-      max-width: 300px;
-      height: 180vw;
-      max-height: 600px;
+      width: 100%;
+      max-width: 400px;
+      height: 100%;
+      max-height: 800px;
       background-color: white;
       border-radius: 20px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.2);
@@ -104,6 +105,16 @@
       display: none;
       width: 220px;
     }
+
+    #totalCountDisplay {
+      position: absolute;
+      top: 10px;
+      left: 12px;
+      font-size: 30px;
+      z-index: 99;
+      font-weight: bold;
+      color: #a3dcff;
+    }
   </style>
 </head>
 <body>
@@ -117,6 +128,7 @@
       <div class="button-overlay">
         <img id="물뿌버튼" src="https://i.ibb.co/pjZWVgyb/image.png" alt="물뿌리기 버튼" />
       </div>
+      <div id="totalCountDisplay">0</div>
       <audio id="waterSound" src="https://files.catbox.moe/y7gz7b.mp3"></audio>
     </div>
   </div>
@@ -147,17 +159,7 @@
       const waterSound = document.getElementById("waterSound");
       const timeImage = document.getElementById("timeImage");
       const dropArea = document.getElementById("물방울영역");
-
-      const counter = document.createElement("div");
-      counter.id = "totalCountDisplay";
-      counter.style.position = "absolute";
-      counter.style.top = "10px";
-      counter.style.left = "12px";
-      counter.style.fontSize = "30px";
-      counter.style.zIndex = "99";
-      counter.style.fontWeight = "bold";
-      counter.style.color = "#a3dcff";
-      document.querySelector(".card").appendChild(counter);
+      const counter = document.getElementById("totalCountDisplay");
 
       onValue(countRef, (snapshot) => {
         const count = snapshot.val() ?? 0;
