--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     }
 
     #물뿌버튼 {
-      width: 270px;
+      width: calc(100% - 20px);
       cursor: pointer;
       transition: transform 0.1s;
     }
