--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
     }
 
     #물뿌버튼 {
-      width: calc(100% - 20px);
+      max-width: 280px;
+      width: 90%;
+      width: 180px;
       cursor: pointer;
       transition: transform 0.1s;
     }
