--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
     }
 
     #물뿌버튼 {
-      max-width: 280px;
-      width: 90%;
+      width: 100%;
+      padding: 0 10px;
+      box-sizing: border-box;
       width: 180px;
       cursor: pointer;
       transition: transform 0.1s;
