--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
     #물뿌버튼 {
       width: 100%;
-      padding: 0 10px;
-      box-sizing: border-box;
+      display: block;
       width: 180px;
       cursor: pointer;
       transition: transform 0.1s;
