--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
     }
 
     #물뿌버튼 {
+      width: 100%;
+      height: auto;
+      aspect-ratio: auto 3 / 1;
+      display: block;
       width: 180px;
       cursor: pointer;
       transition: transform 0.1s;
