--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>물주기 사이트</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
       height: 100%;
+      margin: 0;
       font-family: 'Arial', sans-serif;
       background-color: #f0f8ff;
     }
 
     .container {
+      width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
@@ -22,8 +22,10 @@
 
     .card {
       position: relative;
-      width: 300px;
-      height: 600px;
+      width: 100%;
+      max-width: 400px;
+      height: 100%;
+      max-height: 800px;
       background-color: white;
       border-radius: 20px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.2);
@@ -46,8 +48,8 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 300px;
-      height: 600px;
+      width: 100%;
+      height: 100%;
       z-index: 3;
       pointer-events: none;
     }
@@ -79,18 +81,19 @@
     .button-overlay {
       position: absolute;
       bottom: 20px;
-      left: 10px;
-      right: 10px;
+      left: 50%;
+      transform: translateX(-50%);
       z-index: 2;
     }
 
     #물뿌버튼 {
-      width: 100%;
-      height: auto;
-      display: block;
-      cursor: pointer;
-      transition: transform 0.1s;
-    }
+  width: calc(100% - 20px);
+  max-width: 260px;
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  transition: transform 0.1s;
+}
 
     #물뿌버튼:active {
       transform: scale(0.95);
@@ -105,6 +108,16 @@
       display: none;
       width: 220px;
     }
+
+    #totalCountDisplay {
+      position: absolute;
+      top: 10px;
+      left: 12px;
+      font-size: 30px;
+      z-index: 99;
+      font-weight: bold;
+      color: #a3dcff;
+    }
   </style>
 </head>
 <body>
@@ -118,10 +131,30 @@
       <div class="button-overlay">
         <img id="물뿌버튼" src="https://i.ibb.co/pjZWVgyb/image.png" alt="물뿌리기 버튼" />
       </div>
+      <div id="totalCountDisplay">0</div>
       <audio id="waterSound" src="https://files.catbox.moe/y7gz7b.mp3"></audio>
     </div>
   </div>
-  <script>
+
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+    import { getDatabase, ref, onValue, get, set } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBCuDyKgkDVwptjsQ_sepxq2WylrQWd8ok",
+      authDomain: "smkug-dd359.firebaseapp.com",
+      databaseURL: "https://smkug-dd359-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "smkug-dd359",
+      storageBucket: "smkug-dd359.appspot.com",
+      messagingSenderId: "16714972126",
+      appId: "1:16714972126:web:fc40119945f5e0844d7b4f",
+      measurementId: "G-CP8X2ZQ8XC"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const countRef = ref(db, "totalCount");
+
     window.addEventListener("DOMContentLoaded", () => {
       const button = document.getElementById("물뿌버튼");
       const noticeAlready = document.getElementById("물다줬");
@@ -129,6 +162,12 @@
       const waterSound = document.getElementById("waterSound");
       const timeImage = document.getElementById("timeImage");
       const dropArea = document.getElementById("물방울영역");
+      const counter = document.getElementById("totalCountDisplay");
+
+      onValue(countRef, (snapshot) => {
+        const count = snapshot.val() ?? 0;
+        counter.textContent = count;
+      });
 
       function getTodayString() {
         const today = new Date();
@@ -156,7 +195,7 @@
         drop.addEventListener("animationend", () => drop.remove());
       }
 
-      button.addEventListener("click", () => {
+      button.addEventListener("click", async () => {
         const lastClick = localStorage.getItem("LastClickDate");
         const today = getTodayString();
 
@@ -169,6 +208,10 @@
           setTimeout(() => {
             noticeSuccess.style.display = "none";
           }, 2000);
+
+          const snapshot = await get(countRef);
+          const current = snapshot.exists() ? snapshot.val() : 0;
+          set(countRef, current + 1);
         } else {
           noticeAlready.style.display = "block";
           setTimeout(() => {
