--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
     }
 
     #물뿌버튼 {
-  width: calc(100% - 20px);
-  
+  width: 100%;
+  height: auto;
   display: block;
-  margin: 0 auto;
+  aspect-ratio: 3 / 1;
+  object-fit: contain;
   cursor: pointer;
   transition: transform 0.1s;
 }
