--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>물주기 사이트</title>
   <style>
     html, body {
-      height: 100%;
       margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: 'Arial', sans-serif;
       background-color: #f0f8ff;
     }
 
     .container {
-      width: 100%;
       height: 100%;
       display: flex;
       justify-content: center;
@@ -22,10 +21,8 @@
 
     .card {
       position: relative;
-      width: 100%;
-      max-width: 400px;
-      height: 100%;
-      max-height: 800px;
+      width: 300px;
+      height: 600px;
       background-color: white;
       border-radius: 20px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.2);
@@ -48,8 +45,8 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 300px;
+      height: 600px;
       z-index: 3;
       pointer-events: none;
     }
@@ -81,20 +78,23 @@
     .button-overlay {
       position: absolute;
       bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
+      left: 0;
+      right: 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
       z-index: 2;
     }
 
     #물뿌버튼 {
-  width: 480px;
-  height: auto;
-  display: block;
-  aspect-ratio: 3 / 1;
-  object-fit: contain;
-  cursor: pointer;
-  transition: transform 0.1s;
-}
+      width: 100%;
+      height: auto;
+      display: block;
+      aspect-ratio: 3 / 1;
+      object-fit: contain;
+      cursor: pointer;
+      transition: transform 0.1s;
+    }
 
     #물뿌버튼:active {
       transform: scale(0.95);
@@ -132,14 +132,14 @@
       <div class="button-overlay">
         <img id="물뿌버튼" src="https://i.ibb.co/pjZWVgyb/image.png" alt="물뿌리기 버튼" />
       </div>
-      <div id="totalCountDisplay">0</div>
       <audio id="waterSound" src="https://files.catbox.moe/y7gz7b.mp3"></audio>
+      <div id="totalCountDisplay">0</div>
     </div>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
-    import { getDatabase, ref, onValue, get, set } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
+    import { getDatabase, ref, child, onValue, get, set } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBCuDyKgkDVwptjsQ_sepxq2WylrQWd8ok",
@@ -156,73 +156,79 @@
     const db = getDatabase(app);
     const countRef = ref(db, "totalCount");
 
-    window.addEventListener("DOMContentLoaded", () => {
-      const button = document.getElementById("물뿌버튼");
-      const noticeAlready = document.getElementById("물다줬");
-      const noticeSuccess = document.getElementById("성공알림");
-      const waterSound = document.getElementById("waterSound");
-      const timeImage = document.getElementById("timeImage");
-      const dropArea = document.getElementById("물방울영역");
-      const counter = document.getElementById("totalCountDisplay");
+    const button = document.getElementById("물뿌버튼");
+    const noticeAlready = document.getElementById("물다줬");
+    const noticeSuccess = document.getElementById("성공알림");
+    const waterSound = document.getElementById("waterSound");
+    const timeImage = document.getElementById("timeImage");
+    const dropArea = document.getElementById("물방울영역");
+    const counter = document.getElementById("totalCountDisplay");
 
-      onValue(countRef, (snapshot) => {
-        const count = snapshot.val() ?? 0;
-        counter.textContent = count;
-      });
+    function getTodayString() {
+      const today = new Date();
+      return `${today.getFullYear()}-${today.getMonth() + 1}-${today.getDate()}`;
+    }
 
-      function getTodayString() {
-        const today = new Date();
-        return `${today.getFullYear()}-${today.getMonth() + 1}-${today.getDate()}`;
+    function updateTimeImage() {
+      const hour = new Date().getHours();
+      if (hour >= 6 && hour < 9) {
+        timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
+      } else if (hour >= 9 && hour < 17) {
+        timeImage.src = "https://i.ibb.co/W40tb97w/image.png";
+      } else if (hour >= 17 && hour < 20) {
+        timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
+      } else {
+        timeImage.src = "https://i.ibb.co/VpPc6gW0/image.png";
       }
+    }
 
-      function updateTimeImage() {
-        const hour = new Date().getHours();
-        if (hour >= 6 && hour < 9) {
-          timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
-        } else if (hour >= 9 && hour < 17) {
-          timeImage.src = "https://i.ibb.co/W40tb97w/image.png";
-        } else if (hour >= 17 && hour < 20) {
-          timeImage.src = "https://i.ibb.co/j9tjPRLR/image.png";
-        } else {
-          timeImage.src = "https://i.ibb.co/VpPc6gW0/image.png";
-        }
-      }
+    function createDrop() {
+      const drop = document.createElement("img");
+      drop.src = "https://i.postimg.cc/dQWRcKBW/01.png";
+      drop.className = "drop";
+      dropArea.appendChild(drop);
+      drop.addEventListener("animationend", () => drop.remove());
+    }
 
-      function createDrop() {
-        const drop = document.createElement("img");
-        drop.src = "https://i.postimg.cc/dQWRcKBW/01.png";
-        drop.className = "drop";
-        dropArea.appendChild(drop);
-        drop.addEventListener("animationend", () => drop.remove());
-      }
+    onValue(countRef, (snapshot) => {
+      const count = snapshot.val() ?? 0;
+      counter.textContent = count;
+    });
 
-      button.addEventListener("click", async () => {
-        const lastClick = localStorage.getItem("LastClickDate");
+    button.addEventListener("click", async () => {
+      try {
         const today = getTodayString();
+        const ipData = await fetch("https://api.ipify.org?format=json").then(res => res.json());
+        const ip = ipData.ip.replace(/\./g, "_");
+        const ipRef = child(ref(db), `ipLogs/${ip}`);
 
-        createDrop();
-        waterSound.play();
-
-        if (lastClick !== today) {
-          localStorage.setItem("LastClickDate", today);
-          noticeSuccess.style.display = "block";
-          setTimeout(() => {
-            noticeSuccess.style.display = "none";
-          }, 2000);
-
-          const snapshot = await get(countRef);
-          const current = snapshot.exists() ? snapshot.val() : 0;
-          set(countRef, current + 1);
-        } else {
+        const ipSnap = await get(ipRef);
+        if (ipSnap.exists() && ipSnap.val() === today) {
           noticeAlready.style.display = "block";
           setTimeout(() => {
             noticeAlready.style.display = "none";
           }, 2000);
+          return;
         }
-      });
 
-      updateTimeImage();
+        // 물주기 성공
+        createDrop();
+        waterSound.play();
+        noticeSuccess.style.display = "block";
+        setTimeout(() => {
+          noticeSuccess.style.display = "none";
+        }, 2000);
+
+        const snapshot = await get(countRef);
+        const current = snapshot.exists() ? snapshot.val() : 0;
+        await set(countRef, current + 1);
+        await set(ipRef, today);
+      } catch (err) {
+        console.error("클릭 처리 오류:", err);
+      }
     });
+
+    updateTimeImage();
   </script>
 </body>
 </html>
