--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     }
 
     #물뿌버튼 {
-      width: 100%;
+      width: 480px;
       height: auto;
       display: block;
       aspect-ratio: 3 / 1;
@@ -119,7 +119,7 @@
       position: absolute;
       top: 10px;
       left: 12px;
-      font-size: 30px;
+      font-size: 40px;
       z-index: 99;
       font-weight: bold;
       color: #a3dcff;
