--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
       transform: translateX(-50%);
       z-index: 4;
       display: none;
-      width: 220px;
+      width: 300px;
+      height: auto;
     }
 
     #totalCountDisplay {
