--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>물주기 사이트</title>
   <style>
+    body { overscroll-behavior: none; }
+    * { -webkit-tap-highlight-color: transparent; }
+
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      min-height: 100dvh;
       background-color: #f0f8ff;
       font-family: 'Arial', sans-serif;
       display: flex;
@@ -18,7 +21,7 @@
 
     .container {
       width: 100vw;
-      height: 100vh;
+      min-height: 100dvh;
       max-width: 400px;
       max-height: 800px;
       background-color: white;
@@ -52,7 +55,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      min-height: 100dvh;
       z-index: 3;
       pointer-events: none;
     }
