--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <meta charset="UTF-8" />
   <title>물주기 사이트</title>
   <style>
     html, body {
-      height: 100%;
+      height: 100dvh;
       margin: 0;
       font-family: 'Arial', sans-serif;
       background-color: #f0f8ff;
     }
 
     .container {
-      height: 100%;
+      height: 100dvh;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -33,7 +34,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 100dvh;
       object-fit: cover;
     }
 
